--- a/ExViewer/Views/CachedPage.xaml
+++ b/ExViewer/Views/CachedPage.xaml
@@ -10,7 +10,8 @@
                  x:Name="page"
                  mc:Ignorable="d">
     <controls:MyPage.Resources>
-        <MenuFlyout x:Name="mf_Gallery">
+        <MenuFlyout x:Name="mf_Gallery"
+                    Placement="Bottom">
             <MenuFlyoutItem x:Uid="Views/CachedPage/DeleteMenuFlyout"
                             x:Name="mfi_DeleteGallery"
                             Text="Delete"
