--- a/ExViewer/Controls/CommentViewer.xaml
+++ b/ExViewer/Controls/CommentViewer.xaml
@@ -31,7 +31,7 @@
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
                         <Setter Target="Author.(RelativePanel.Below)"
-                                Value="Posted" />
+                                Value="TimeInfo" />
                         <Setter Target="IsUploaderComment.(RelativePanel.AlignRightWithPanel)"
                                 Value="True" />
                         <Setter Target="Score.(RelativePanel.AlignRightWithPanel)"
@@ -46,7 +46,7 @@
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
                         <Setter Target="Author.(RelativePanel.RightOf)"
-                                Value="Posted" />
+                                Value="TimeInfo" />
                         <Setter Target="IsUploaderComment.(RelativePanel.LeftOf)"
                                 Value="Actions" />
                         <Setter Target="Score.(RelativePanel.LeftOf)"
@@ -89,24 +89,33 @@
                                  Opacity="0.3" />
             </Rectangle.Fill>
         </Rectangle>
-        <TextBlock x:Name="Posted"
-                   RelativePanel.AlignLeftWithPanel="True"
-                   RelativePanel.AlignTopWithPanel="True"
-                   Style="{StaticResource CommentHeaderTextBlockStyle}"
-                   Text="{x:Bind Comment.Posted, Mode=OneWay, Converter={StaticResource DateTimeOffsetToStringConverter}, ConverterParameter='Controls/CommentViewer/PostedFormatString'}" />
+        <Grid x:Name="TimeInfo"
+              RelativePanel.AlignLeftWithPanel="True"
+              RelativePanel.AlignTopWithPanel="True">
+            <TextBlock x:Name="Posted"
+                       Style="{StaticResource CommentHeaderTextBlockStyle}"
+                       Text="{x:Bind Comment.Posted, Mode=OneWay, Converter={StaticResource DateTimeOffsetToStringConverter}, ConverterParameter='Controls/CommentViewer/PostedFormatString'}"
+                       Visibility="{x:Bind Comment.Edited, Mode=OneWay, Converter={StaticResource NullToVisibleConverter}}" />
+            <TextBlock x:Name="Edited"
+                       x:DeferLoadStrategy="Lazy"
+                       Style="{StaticResource CommentHeaderTextBlockStyle}"
+                       Text="{x:Bind Comment.Edited, Mode=OneWay, Converter={StaticResource DateTimeOffsetToStringConverter}, ConverterParameter='Controls/CommentViewer/EditedFormatString'}"
+                       Visibility="{x:Bind Comment.Edited, Mode=OneWay, Converter={StaticResource NullToCollapsedConverter}}"
+                       ToolTipService.ToolTip="{x:Bind Comment.Posted, Mode=OneWay, Converter={StaticResource DateTimeOffsetToStringConverter}, ConverterParameter='Controls/CommentViewer/PostedFormatString'}"/>
+        </Grid>
         <TextBlock x:Name="Author"
                    Style="{StaticResource CommentHeaderTextBlockStyle}"
                    Text="{x:Bind Comment.Author, Mode=OneWay, Converter={StaticResource StringConverter}, ConverterParameter='Controls/CommentViewer/AuthorFormatString'}" />
         <TextBlock x:Name="Score"
                    HorizontalAlignment="Right"
-                   RelativePanel.AlignTopWith="Posted"
+                   RelativePanel.AlignTopWith="TimeInfo"
                    Style="{StaticResource CommentHeaderTextBlockStyle}"
                    Text="{x:Bind Comment.Score, Mode=OneWay, Converter={StaticResource StringConverter}, ConverterParameter='Controls/CommentViewer/ScoreFormatString'}"
                    Visibility="{x:Bind Comment.IsUploaderComment, Mode=OneWay, Converter={StaticResource FalseToVisibleConverter}}" />
         <TextBlock x:Name="IsUploaderComment"
                    x:Uid="Controls/CommentViewer/IsUploaderCommentTextBlock"
                    HorizontalAlignment="Right"
-                   RelativePanel.AlignTopWith="Posted"
+                   RelativePanel.AlignTopWithPanel="True"
                    Style="{StaticResource CommentHeaderTextBlockStyle}"
                    Text="Uploader Comment"
                    Visibility="{x:Bind Comment.IsUploaderComment, Mode=OneWay, Converter={StaticResource TrueToVisibleConverter}, FallbackValue=Collapsed}" />
@@ -120,7 +129,8 @@
                 VerticalContentAlignment="Stretch">
             <FontIcon Glyph="" />
             <Button.Flyout>
-                <MenuFlyout x:Name="ActionsFlyout" Placement="Bottom">
+                <MenuFlyout x:Name="ActionsFlyout"
+                            Placement="Bottom">
                     <MenuFlyoutItem x:Name="VoteUp"
                                     x:Uid="Controls/CommentViewer/VoteUpMenuFlyoutItem"
                                     Visibility="{x:Bind Comment.Status, Mode=OneWay, Converter={StaticResource ConUp}}"
@@ -150,7 +160,7 @@
                     <MenuFlyoutItem x:Name="Translate"
                                     x:Uid="Controls/CommentViewer/TranslateMenuFlyoutItem"
                                     Text="Translate to English"
-                                    IsEnabled="{x:Bind Translated.HtmlContent, Mode=OneWay, Converter={StaticResource NullToTrueConverter}}"
+                                    IsEnabled="{x:Bind TranslatedContent, Mode=OneWay, Converter={StaticResource NullToTrueConverter}}"
                                     Click="Translate_Click" />
                 </MenuFlyout>
             </Button.Flyout>
@@ -158,7 +168,7 @@
         <local:HtmlTextBlock x:Name="Text"
                              Margin="12,12,12,4"
                              DetectLink="True"
-                             Opacity="{x:Bind Translated.HtmlContent,Converter={StaticResource ContentOpacity}, Mode=OneWay, FallbackValue=1}"
+                             Opacity="{x:Bind TranslatedContent, Converter={StaticResource ContentOpacity}, Mode=OneWay, FallbackValue=1}"
                              XYFocusUp="{x:Bind Score}"
                              XYFocusDown="{x:Bind Translated.FirstLink, Mode=OneWay}"
                              HtmlContent="{x:Bind Comment.Content, Mode=OneWay}"
@@ -166,26 +176,17 @@
                              RelativePanel.AlignLeftWithPanel="True"
                              RelativePanel.AlignRightWithPanel="True"
                              RelativePanel.Below="Header" />
-        <TextBlock x:Name="Edited"
-                   Margin="12,4"
-                   Pivot.SlideInAnimationGroup="GroupTwo"
-                   RelativePanel.AlignLeftWithPanel="True"
-                   RelativePanel.AlignRightWithPanel="True"
-                   RelativePanel.Below="Text"
-                   Foreground="{ThemeResource ApplicationSecondaryForegroundThemeBrush}"
-                   Style="{StaticResource EditedTextBlockStyle}"
-                   Text="{x:Bind Comment.Edited, Mode=OneWay, Converter={StaticResource DateTimeOffsetToStringConverter}, ConverterParameter='Controls/CommentViewer/EditedFormatString'}"
-                   Visibility="{x:Bind Comment.Edited, Mode=OneWay, Converter={StaticResource NullToCollapsedConverter}}" />
         <local:HtmlTextBlock x:Name="Translated"
                              x:DeferLoadStrategy="Lazy"
                              Margin="12,12,12,4"
                              DetectLink="True"
-                             Visibility="{x:Bind Translated.HtmlContent, Mode=OneWay, Converter={StaticResource NullToCollapsedConverter}}"
+                             HtmlContent="{x:Bind TranslatedContent, Mode=OneWay}"
+                             Visibility="{x:Bind TranslatedContent, Mode=OneWay, Converter={StaticResource NullToCollapsedConverter}}"
                              XYFocusUp="{x:Bind Text.LastLink, Mode=OneWay}"
-                             Pivot.SlideInAnimationGroup="GroupThree"
+                             Pivot.SlideInAnimationGroup="GroupTwo"
                              RelativePanel.AlignBottomWithPanel="True"
                              RelativePanel.AlignLeftWithPanel="True"
                              RelativePanel.AlignRightWithPanel="True"
-                             RelativePanel.Below="Edited" />
+                             RelativePanel.Below="Text" />
     </RelativePanel>
 </UserControl>
