--- a/ExViewer/Strings/zh-hant/Dictionary.xaml
+++ b/ExViewer/Strings/zh-hant/Dictionary.xaml
@@ -1,5 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <!--  zh-hans  -->
-    <x:String x:Key="GuestUserNameString">游客</x:String>
+    <!--  zh-hant  -->
+    <x:String x:Key="GuestUserNameString">遊客</x:String>
 </ResourceDictionary>
